--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,14 +33,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Registro_Alumno
 excludes=
+file.reference.gson-2.8.3.jar=C:\\Users\\brand\\OneDrive\\Documentos\\NetBeansProjects\\repasoUCS\\src\\libs\\gson-2.8.3.jar
 file.reference.lombok.jar=C:\\Users\\Jos\u00e9\\Downloads\\lombok.jar
+file.reference.lombok.jar-1=C:\\Users\\brand\\OneDrive\\Documentos\\NetBeansProjects\\repasoUCS\\src\\libs\\lombok.jar
 file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\Jos\u00e9\\Downloads\\jar_files\\mysql-connector-java-8.0.28.jar
+file.reference.mysql-connector-java-8.0.28.jar-1=C:\\Users\\brand\\OneDrive\\Documentos\\NetBeansProjects\\repasoUCS\\src\\libs\\mysql-connector-java-8.0.28.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.lombok.jar}:\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.28.jar-1}:\
+    ${file.reference.lombok.jar-1}:\
+    ${file.reference.gson-2.8.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -76,7 +82,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Registro_Alumno
-main.class=
+main.class=pe.edu.cientifica.test.Test
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
